Prevent xml-jaxb extension producing CamelModelToXMLDumperBuildItem if xml-io-dsl is present